# implies

./: Cargo.toml  README.md  build.rs  pyproject.toml
src/: formula.rs  lib.rs  modal.rs  prop.rs  symbol.rs  tests.rs
src/python/: prop.rs  proposition.rs
src/tests/: prop.rs
