[package]
name = "implies"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
pyo3 = "0.19.2"
cascade = "1.0.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

