[package]
name = "implies"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A parser for logical formulas"
repository = "https://github.com/armaan-rashid/implies"
documentation = "https://docs.rs/implies/0.2.1-alpha/implies/"
readme = "README.md"
keywords = ["logic", "binary_tree", "tree", "graph"]
categories = ["data-structures", "mathematics"]

[lib]
name = "implies"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
pyo3-build-config = "0.20.0"

[dependencies]
rand = "0.8.5"
pyo3 = {version = "0.19.2", optional = true}
cascade = "1.0.1"

[features]
auto-init = ["pyo3/auto-initialize"]
extension-module = ["pyo3/extension-module"]
python = ["pyo3", "auto-init", "extension-module"]
default = []

